添加了一个有用的资源
添加一个有用的链接，详细讨论 python，我希望你会喜欢这个，因为它会为你的存储库和读者增加价值。谢谢。

--- a/Python/index.html
+++ b/Python/index.html
@@ -411,6 +411,7 @@ Python标准库中文版.pdf
 <li><a href="http://www.pythondoc.com/flask-mega-tutorial/" target="_blank" rel="external">Flask大型教程</a> 本系列是作者平时使用 Flask 微框架编写应用的经验之谈</li>
 <li><a href="http://docs.pythontab.com/tornado/introduction-to-tornado/" target="_blank" rel="external">Tornado入门教程</a></li>
 <li><a href="http://www.pythondoc.com/" target="_blank" rel="external">Python中文学习大本营</a></li>
+<li><a href="https://www.scaler.com/topics/python/" target="_blank" rel="external"></a>Python 初学者教程</li>   
 <li>《编写高质量代码 改善Python程序的91个建议.pdf》</li>
 <li><a href="http://www.dongwm.com/" target="_blank" rel="external">聊聊python面试这件事儿</a></li>
 <li><a href="http://www.cnblogs.com/haozi0804/p/4736113.html" target="_blank" rel="external">Python开发入门与实战</a> Django教程</li>
